--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -12,31 +12,45 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :name, "物件名"  %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :maney %>
+    <%= form.label :maney,"賃料" %>
     <%= form.text_field :maney %>
   </div>
 
   <div class="field">
-    <%= form.label :from %>
+    <%= form.label :from,"住所" %>
     <%= form.text_field :from %>
   </div>
 
   <div class="field">
-    <%= form.label :age %>
+    <%= form.label :age,"築年数" %>
     <%= form.text_field :age %>
   </div>
 
   <div class="field">
-    <%= form.label :content %>
+    <%= form.label :content,"備考" %>
     <%= form.text_field :content %>
   </div>
+
+ <%= form.fields_for :stations do | station | %>
+
+  <%= station.label :route, "路線" %>
+  <%= station.text_field :route %>
+
+  <%= station.label :station_name, "駅名" %>
+  <%= station.text_field :station_name %>
+
+  <%= station.label :distance, "距離" %>
+  <%= station.text_field :distance %>
+
+ <% end %>
 
   <div class="actions">
     <%= form.submit %>
   </div>
 <% end %>
+
