--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,29 +1,46 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>物件名:</strong>
   <%= @property.name %>
 </p>
 
 <p>
-  <strong>Maney:</strong>
+  <strong>賃料:</strong>
   <%= @property.maney %>
 </p>
 
 <p>
-  <strong>From:</strong>
+  <strong>住所:</strong>
   <%= @property.from %>
 </p>
 
 <p>
-  <strong>Age:</strong>
+  <strong>年齢:</strong>
   <%= @property.age %>
 </p>
 
 <p>
-  <strong>Content:</strong>
+  <strong>備考:</strong>
   <%= @property.content %>
 </p>
 
-<%= link_to 'Edit', edit_property_path(@property) %> |
-<%= link_to 'Back', properties_path %>
+<% number = 0 %>
+<% @property.stations.each do |station|%>
+  <h2>最寄駅<% number += 1 %></h2>
+  <p>
+    <strong>路線名:</strong>
+    <%= station.route %>
+  </p>
+  <p>
+    <strong>駅名:</strong>
+    <%= station.station_name %>
+  </p>
+  <p>
+    <strong>徒歩分数:</strong>
+    <%= station.distance %>
+  </p>
+<% end %>
+
+<%= link_to '編集', edit_property_path(@property) %> |
+<%= link_to '戻る', properties_path %>
