--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -26,7 +26,7 @@
 </p>
  <% number = 0 %>
 <% @property.stations.each do |station|%>
-  <h2>最寄駅<% number += 1 %></h2>
+  <h2>最寄駅<%= number += 1 %></h2>
   <p>
     <strong>路線名:</strong>
     <%= station.route %>
